# pulumi-slack

./: .ci-mgmt.yaml  .golangci.yml  .upgrade-config.yml  Makefile  mise.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/actions/download-bin/: action.yml
.github/actions/download-codegen/: action.yml
.github/actions/download-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main-post-build.yml  main.yml  master.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  verify-release.yml
docs/: _index.md  installation-configuration.md
examples/: examples_nodejs_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go
sdk/: go.mod
sdk/dotnet/: Conversation.cs  GetConversation.cs  GetUser.cs  GetUsergroup.cs  Provider.cs  Pulumi.Slack.csproj  Pulumi.yaml  README.md  Usergroup.cs  Utilities.cs  pulumi-plugin.json
sdk/go/: Pulumi.yaml
sdk/java/: Pulumi.yaml  build.gradle  settings.gradle
sdk/nodejs/: Pulumi.yaml  README.md  conversation.ts  getConversation.ts  getUser.ts  getUsergroup.ts  index.ts  package.json  provider.ts  tsconfig.json  usergroup.ts
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_slack/: README.md  __init__.py  conversation.py  get_conversation.py  get_user.py  get_usergroup.py  provider.py  pulumi-plugin.json  usergroup.py
sdk/python/pulumi_slack/config/: __init__.pyi  vars.py
(+47 files in other folders)
